--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -1,10 +1,10 @@
 .menu {
-    width: 300px;
+    width: 400px;
     height: 100vh;
     background-color: #333;
     position: fixed;
     top: 0;
-    right: -300px;
+    right: -400px;
     z-index: 2;
     display: flex;
     flex-direction: column;
@@ -18,7 +18,7 @@
 
     ul {
         height: 50vh;
-        width: 70%;
+        width: 60%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -26,19 +26,18 @@
         padding: 0;
         list-style: none;
         font-size: 30px;
-        font-weight: 300;
+        font-weight: 400;
         color: #fff;
 
         li {
             a {
-                margin: 0 10px;
-                font-size: inherit;
+                margin: 0 0px;
+                font-size: 32px;
                 color: inherit;
                 text-decoration: none;
             }
 
             &:hover {
-                font-weight: 400;
                 text-shadow: 0px 0px 10px #fff, 0px 0px 10px #fff, 0px 0px 10px #fff;
             }
         }
