--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -1,3 +1,81 @@
+@import "../../global.scss";
+
 .portfolio {
-    background-color: lightpink;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    h1 {
+        font-size: 50px;
+
+        @include mobile {
+            font-size: 20px;
+        }
+    }
+
+    ul {
+        margin: 10px;
+        padding: 0;
+        list-style: none;
+        display: flex;
+
+        @include mobile {
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+    }
+
+    .container {
+        width: 80%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+
+        @include mobile {
+            width: 100%;
+        }
+
+        .item {
+            width: 220px;
+            height: 150px;
+            border-radius: 20px;
+            border: 1px solid #ddd;
+            margin: 10px 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #fff;
+            position: relative;
+            transition: all .7s ease-in;
+            cursor: pointer;
+
+            @include mobile {
+                width: 130px;
+                height: 120px;
+            }
+
+            h3 {
+                position: absolute;
+                font-size: 20px;
+                color: rgb(243, 243, 243);
+            }
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                z-index: 1;
+            }
+
+            &:hover {
+                background-color: rgb(22, 219, 127);
+                img {
+                    opacity: 0.3;
+                    z-index: 0;
+                }
+            }
+        }
+    }
 }
